<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2015 xiaocong@gmail.com
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
  ~ DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
  ~ OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
  ~ OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="app_name">ATXBOT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">SETTINGS</string>
    <string name="monitor_service_ticker">UIAutomator service started</string>
    <string name="monitor_service_title">UIAutomator</string>
    <string name="monitor_service_text">IP</string>
    <string name="agent_die">:ATXBOT is die</string>
    <string name="agent_live">:ATXBOT is live</string>
    <string name="fast_input_label">FastInputIME</string>
    <string name="stop_atxagent">STOP ATXBOT</string>
    <string name="start_atxagent">START ATXBOT</string>
    <string name="stop_uiautomator">STOP UIAutomator</string>
    <string name="start_uiautomator">START UIAutomator</string>
    <string name="barrier_free">Accessible Services</string>
    <string name="develop_mode">Developer Options</string>
    <string name="shot_cut">Shortcuts</string>
    <string name="identify">Identify</string>
    <string name="quit">STOP ALL SERVICES</string>
    <string name="no_permission_tip">No permission to write sd card</string>
    <string name="atx_agent">ATXBOT</string>
    <string name="avaible_internal_storage">INNER STORAGE:</string>
    <string name="avaible_sd_storage">SD CARD:</string>
    <string name="local_ip_address">LOCAL IPADDRESS:</string>
    <string name="server_response">SERVER RESPONESE</string>
    <string name="refresh_status">REFRESH  STATUS</string>
    <string name="test_uiautomator">TEST UIAutomator</string>
</resources>
