<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.uiautomator.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_atx_title"
            style="@style/LeftTitle"
            android:text="ATX-Agent"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_finish"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SelectButton"
                android:text="@string/quit" />

            <Button
                android:id="@+id/btn_identify"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SelectButton"
                android:text="@string/identify" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/LeftTitle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/shot_cut"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ip_address"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/LeftTitle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/development_settings"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SelectButton"
                android:text="@string/develop_mode" />

            <Button
                android:id="@+id/accessibility"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SelectButton"
                android:text="@string/barrier_free" />
        </LinearLayout>

        <Button
            android:id="@+id/stop_uiautomator"
            style="@style/SelectButton"
            android:text="@string/stop_uiautomator" />

        <Button
            android:id="@+id/stop_atx_agent"
            style="@style/SelectButton"
            android:text="@string/stop_atxagent" />

        <Button
            android:id="@+id/btn_coor_locate"
            style="@style/SelectButton"
            android:text="@string/coor_switch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_screen_record"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SelectButton"
                android:text="@string/screen_record" />
            <Button
                android:id="@+id/btn_record_setting"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SelectButton"
                android:text="@string/record_setting" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
